--- a/index.css
+++ b/index.css
@@ -20,7 +20,7 @@ header img{
     width: 150px;
     height: 150px;
     border-radius: 50%;
-    border: 5px solid red;
+    border: 5px solid rgb(218, 7, 7);
 }
 .center{
     text-align: center;
